[package]
name = "rcmerkle"
version = "0.1.1"
authors = ["Sun <huachuang20@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Efficient Merkle tree calculation function and state machine."
repository = "https://github.com/rust-cc/rcmerkle"
keywords = ["merkle", "tree"]
license = "MIT/Apache-2.0"

[dependencies]
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1.0"
inline_colorization = "0.1.6"
