[package]
name = "MerkleTree"
version = "0.1.0"
authors = ["Parsa <parsa.aminpour@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Efficient Merkle tree calculation function and state machine."
repository = "https://github.com/zero-day-nft"
keywords = ["merkle", "tree"]
license = "MIT"

[dependencies]
sha3 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
inline_colorization = "0.1.6"
